For tables with multi-actions, add a selector for all visible rows, ie. those not filtered at the web browser level by the filter feature. Also fix the behaviour of other selectors that moved the page to the top when hit.

--- a/css/global.css
+++ b/css/global.css
@@ -135,7 +135,7 @@ th.data {
 	padding: 3px 7px;
 }
 
-img.action {
+.action {
 	cursor: pointer;
 }
 
